--- a/workflows/run_notebook.yml
+++ b/workflows/run_notebook.yml
@@ -2,7 +2,7 @@ name: Weekly Notebook Execution
 
 on:
   schedule:
-    - cron: "0 0 * * 0"  # Every Sunday at midnight
+    - cron: "* * * * *"  # Every Sunday at midnight
 
 jobs:
   run_notebook:
