--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -22,4 +22,4 @@ jobs:
         run: pip install jupyter
 
       - name: Execute Notebook
-        run: jupyter nbconvert --to notebook --execute test (1).ipynb
+        run: jupyter nbconvert --to notebook --execute test.ipynb
