--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Debug
-        run: echo $GITHUB_WORKSPACE/test_data.pkl
+        run: pwd()
         
       - name: Checkout code
         uses: actions/checkout@v3
