--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Debug
         run: |
           pwd
+
+      - env:
+        GH_TOKEN: "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"
           
       - name: Checkout code
         uses: actions/checkout@v3
