--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -26,8 +26,16 @@ jobs:
         run: pip install jupyter
 
       - name: Execute Notebook
-        env:
-          GH_TOKEN: "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"
         run: |
           jupyter nbconvert --to notebook --execute test.ipynb
           python test.py
+
+      - name: Commit and Push Changes
+      env:
+        GITHUB_TOKEN: "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"
+      run: |
+        git config --global user.email "jeanbouteiller.ds@gmail.com"
+        git config --global user.name "jeanbouteiller-ds"
+        git add test_data.txt
+        git commit -m "Update text file"
+        git push
