--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -11,8 +11,7 @@ jobs:
 
     steps:
       - name: Debug
-        run: |
-          pwd
+        run: pwd
 
       - name: Checkout code
         uses: actions/checkout@v3
