--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Commit and Push Changes
         env:
-          GITHUB_TOKEN: "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"
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git config --global user.email "jeanbouteiller.ds@gmail.com"
           git config --global user.name "jeanbouteiller-ds"
