--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Debug Permissions
         run: |
           echo "GitHub Actions Token: $${{ secrets.GH_TOKEN }}"
+
+      - name: List Git Configuration
+        run: |
           git config --get-all --show-origin --list
 
       - name: Checkout code
