--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: List Git Configuration
         run: |
-          git config --list
+          git config --list --show-origin
 
       - name: Checkout code
         uses: actions/checkout@v3
