--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -15,6 +15,8 @@ jobs:
           echo "GitHub Actions Token: $${{ secrets.GH_TOKEN }}"
 
       - name: List Git Configuration
+        env:
+            GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git config --list --show-origin
 
