--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -35,6 +35,10 @@ jobs:
         run: |
           jupyter nbconvert --to notebook --execute Update_weekly_ranking.ipynb
 
+      - name: Set Merge Strategy
+        run: git config pull.rebase true  # Set merge strategy to rebase
+      - name: Pull Remote Changes
+        run: git pull origin main
       - name: Commit and Push Changes
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN_1 }}
@@ -46,5 +50,5 @@ jobs:
           git add "df_player_fixed.csv"
           git add "Update_weekly_ranking.nbconvert.ipynb"
           git commit -m "Update files"
-          git pull origin main
           git push
+
