--- a/.github/workflows/update_all_matchs.yml
+++ b/.github/workflows/update_all_matchs.yml
@@ -31,10 +31,10 @@ jobs:
 
       - name: Execute Notebook
         run: |
-          jupyter nbconvert --to notebook --execute update_all_matchs.ipynb
+          jupyter nbconvert --to notebook --execute workflow_notebooks/update_all_matchs.ipynb
 
-      - name: Discard Local Changes
-        run: git checkout "update_all_matchs.nbconvert.ipynb"
+      # - name: Discard Local Changes
+      #   run: git checkout "update_all_matchs.nbconvert.ipynb"
           
 
 
@@ -49,7 +49,7 @@ jobs:
             git config --global user.email "jeanbouteiller.ds@gmail.com"
             git config --global user.name "jeanbouteiller-ds"
             git add "df_all_matchs.csv"
-            git add "update_all_matchs.nbconvert.ipynb"
+            # git add "update_all_matchs.nbconvert.ipynb"
             git commit -m "Update files"
             git push
           else
