--- a/.github/workflows/update_weekly.yml
+++ b/.github/workflows/update_weekly.yml
@@ -31,10 +31,10 @@ jobs:
 
       - name: Execute Notebook
         run: |
-          jupyter nbconvert --to notebook --execute update_weekly.ipynb
+          jupyter nbconvert --to notebook --execute workflow_notebooks/update_weekly.ipynb
 
       - name: Discard Local Changes
-        run: git checkout "update_weekly.nbconvert.ipynb"
+        run: git checkout "workflow_notebooks/update_weekly.nbconvert.ipynb"
           
 
 
@@ -48,12 +48,12 @@ jobs:
           if [[ -n $(git status --porcelain) ]]; then
             git config --global user.email "jeanbouteiller.ds@gmail.com"
             git config --global user.name "jeanbouteiller-ds"
-            git add "df_all_ranking.csv"
-            git add "df_all_betting.csv"
-            git add "df_player_fixed.csv"
+            git add "data/df_all_ranking.csv"
+            git add "data/df_all_betting.csv"
+            git add "data/df_player_fixed.csv"
             git add "data/list_all_players_names.txt"
             git add "data/list_all_urls.txt"
-            git add "update_weekly.nbconvert.ipynb"
+            git add "workflow_notebooks/update_weekly.nbconvert.ipynb"
             git commit -m "Update files"
             git push
           else
